--- a/assets/about.html
+++ b/assets/about.html
@@ -30,8 +30,8 @@
           </a>
           <ul class="navmenu" style="transition: all 0.3s ease-in-out;">
                <li><a href="../index.html">Home</a></li>
-               <li><a href="shop.html" style="color: #F28123;">Shop</a></li>
-               <li><a href="about.html">About</a></li>
+               <li><a href="shop.html">Shop</a></li>
+               <li><a href="about.html" style="color: #F28123;">About</a></li>
                <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="nav-icon" style="transition: all 0.3s ease-in-out;">
@@ -50,8 +50,8 @@
           </div>
           <ul class="navmenu" id="navmenu" style="transition: all 0.3s ease-in-out;">
                <li><a href="../index.html">Home</a></li>
-               <li><a href="shop.html" style="color: #F28123;">Shop</a></li>
-               <li><a href="about.html">About</a></li>
+               <li><a href="shop.html">Shop</a></li>
+               <li><a href="about.html" style="color: #F28123;">About</a></li>
                <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="nav-icon" id="nav-icon" style="transition: all 0.3s ease-in-out;">
@@ -59,118 +59,94 @@
                <li><a href="../login.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
      </header>
-     <section class="our-product shop-our-product">
-          <h3 class="out-product-title"><span style="color: #F28123;">Our</span> Products</h3>
-          <div class="buton-link">
-               <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Shop</li>
-                    </ol>
-                  </nav>
-          </div>
-          <div class="container">
+     <section class="about-section responsive-about-content">
+          <h1 class="text-center" style="padding-top: 10px; font-weight: 700;"><span
+                    style="color: #F28123;">About</span> Us</h1>
+          <div class="container about-container">
                <div class="row">
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-1.jpg"
-                                   alt="">
-                              <h3>Strawberry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-2.jpg"
-                                   alt="">
-                              <h3>Berry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-3.jpg"
-                                   alt="">
-                              <h3>Lemon</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-1.jpg"
-                                   alt="">
-                              <h3>Strawberry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-2.jpg"
-                                   alt="">
-                              <h3>Berry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-3.jpg"
-                                   alt="">
-                              <h3>Lemon</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
+                    <div class="col-lg-7">
+                         <div class="featured-text">
+                              <h2 class="pb-3" style="font-weight: 700; font-size: 45px;">
+                                   Why
+                                   <span style="color: #F28123;">Fruitkha</span>
+                              </h2>
+                              <div class="row">
+                                   <div class="col-md-6 about-col">
+                                        <div class="list-box d-flex">
+                                             <div class="list-icon" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                                  <img src="https://raw.githubusercontent.com/ngthanhvu/data/main/bag-music-2-svgrepo-com.png"
+                                                       alt="" width="50px" height="50px" draggable="true"
+                                                       ondragstart="drag(event)" id="drag1">
+                                             </div>
+                                             <div class="content content-about">
+                                                  <h3>Home Delivery</h3>
+                                                  <p>sit voluptatem accusantium dolore mque laudantium, totam rem
+                                                       aperiam, eaque ipsa quae ab illo.</p>
+                                             </div>
+                                        </div>
+                                   </div>
+                                   <div class="col-md-6 about-col">
+                                        <div class="list-box d-flex">
+                                             <div class="list-icon" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                                  <!-- <i class="fas fa-shipping-fast"></i> -->
+                                             </div>
+                                             <div class="content content-about">
+                                                  <h3>Best Price</h3>
+                                                  <p>sit voluptatem accusantium dolore mque laudantium, totam rem
+                                                       aperiam, eaque ipsa quae ab illo.</p>
+                                             </div>
+                                        </div>
+                                   </div>
+                                   <div class="col-md-6 about-col">
+                                        <div class="list-box d-flex">
+                                             <div class="list-icon" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                                  <!-- <i class="fas fa-shipping-fast"></i> -->
+                                             </div>
+                                             <div class="content content-about">
+                                                  <h3>
+                                                       Custom Box</h3>
+                                                  <p>sit voluptatem accusantium dolore mque laudantium, totam rem
+                                                       aperiam, eaque ipsa quae ab illo.</p>
+                                             </div>
+                                        </div>
+                                   </div>
+                                   <div class="col-md-6 about-col">
+                                        <div class="list-box d-flex">
+                                             <div class="list-icon" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                                  <!-- <i class="fas fa-shipping-fast"></i> -->
+                                             </div>
+                                             <div class="content content-about">
+                                                  <h3>
+                                                       Quick Refund</h3>
+                                                  <p>sit voluptatem accusantium dolore mque laudantium, totam rem
+                                                       aperiam, eaque ipsa quae ab illo.</p>
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
                          </div>
                     </div>
                </div>
-               <nav aria-label="..." class="pagelink-nav">
-                    <ul class="pagination">
-                      <li class="page-item link-transparent">
-                        <a class="page-link">Previous</a>
-                      </li>
-                      <li class="page-item link-transparent"><a class="page-link" style="background-color: #F28123; color: #fff;" href="#">1</a></li>
-                      <li class="page-item link-transparent" aria-current="page">
-                        <a class="page-link link-transparent" href="#">2</a>
-                      </li>
-                      <li class="page-item link-transparent"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item link-transparent">
-                        <a class="page-link" href="#">Next</a>
-                      </li>
-                    </ul>
-                  </nav>
           </div>
+          <div class="feature-bg"></div>
      </section>
+
+     <!-- logo nhà tài trợ -->
      <section class="ads-brand">
           <div class="slider">
                <div class="slides">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png" class="slide" alt="Image 1">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png" class="slide" alt="Image 2">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png" class="slide" alt="Image 3">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png" class="slide" alt="Image 4">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png"
+                         class="slide" alt="Image 1">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png"
+                         class="slide" alt="Image 2">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png"
+                         class="slide" alt="Image 3">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png"
+                         class="slide" alt="Image 4">
                </div>
-           </div>
-      </section>
+          </div>
+     </section>
+     <!-- kết thúc section logo nhà tài trợ -->
      <footer>
           <!-- Grid container -->
           <div class="container p-4 pb-0">
@@ -258,10 +234,11 @@
           </div>
           <div class="text-center p-3 end-ft">
                © 2024 Copyright
-               <a class="text-white" href="../index.html"> Fruitshop</a>
+               <a class="text-white" href="index.html"> Fruitshop</a>
           </div>
      </footer>
      <script src="../js/app.js"></script>
+     <script src="../js/dragdrop.js"></script>
      <script src="../js/responsive.js"></script>
 </body>
 
