--- a/assets/cart.html
+++ b/assets/cart.html
@@ -5,8 +5,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Fruits Shop - Asm</title>
-     <link rel="shortcut icon" type="image/png"
-          href="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/favicon.png">
+     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/favicon.png">
      <link rel="stylesheet" href="../css/style.css">
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,12 +29,12 @@
           </a>
           <ul class="navmenu" style="transition: all 0.3s ease-in-out;">
                <li><a href="../index.html">Home</a></li>
-               <li><a href="shop.html" style="color: #F28123;">Shop</a></li>
+               <li><a href="shop.html">Shop</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="nav-icon" style="transition: all 0.3s ease-in-out;">
-               <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+               <li><a href="cart.html" style="color: #F28123;"><i class="fa-solid fa-cart-shopping"></i></a></li>
                <li><a href="../login.html"><i class="fa-solid fa-user"></i></a></li>
                <li><span style="color: #fff;" id="username"></span></li>
           </ul>
@@ -50,127 +49,90 @@
           </div>
           <ul class="navmenu" id="navmenu" style="transition: all 0.3s ease-in-out;">
                <li><a href="../index.html">Home</a></li>
-               <li><a href="shop.html" style="color: #F28123;">Shop</a></li>
+               <li><a href="shop.html">Shop</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="contact.html">Contact</a></li>
           </ul>
           <ul class="nav-icon" id="nav-icon" style="transition: all 0.3s ease-in-out;">
-               <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+               <li><a href="cart.html" style="color: #F28123;"><i class="fa-solid fa-cart-shopping"></i></a></li>
                <li><a href="../login.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
      </header>
-     <section class="our-product shop-our-product">
-          <h3 class="out-product-title"><span style="color: #F28123;">Our</span> Products</h3>
-          <div class="buton-link">
-               <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Shop</li>
-                    </ol>
-                  </nav>
-          </div>
+     <section class="" style="padding-top: 80px;">
+          <h1 class="text-center" style="padding-top: 10px; font-weight: 700;"><span
+               style="color: #F28123;">Ca</span>rt</h1>
           <div class="container">
                <div class="row">
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-1.jpg"
-                                   alt="">
-                              <h3>Strawberry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-2.jpg"
-                                   alt="">
-                              <h3>Berry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-3.jpg"
-                                   alt="">
-                              <h3>Lemon</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-1.jpg"
-                                   alt="">
-                              <h3>Strawberry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-2.jpg"
-                                   alt="">
-                              <h3>Berry</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-                    <div class="col-md-4 colum_product">
-                         <div class="product_card">
-                              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/products/product-img-3.jpg"
-                                   alt="">
-                              <h3>Lemon</h3>
-                              <p>Per Kg</p>
-                              <h3>85$</h3>
-                              <button style="background-color: #F28123; color: #fff;" class="btn hove-buton-prd"><i
-                                        class="fa-solid fa-cart-shopping"></i> add to cart</button>
-
-                         </div>
-                    </div>
-               </div>
-               <nav aria-label="..." class="pagelink-nav">
-                    <ul class="pagination">
-                      <li class="page-item link-transparent">
-                        <a class="page-link">Previous</a>
-                      </li>
-                      <li class="page-item link-transparent"><a class="page-link" style="background-color: #F28123; color: #fff;" href="#">1</a></li>
-                      <li class="page-item link-transparent" aria-current="page">
-                        <a class="page-link link-transparent" href="#">2</a>
-                      </li>
-                      <li class="page-item link-transparent"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item link-transparent">
-                        <a class="page-link" href="#">Next</a>
-                      </li>
-                    </ul>
-                  </nav>
-          </div>
-     </section>
-     <section class="ads-brand">
-          <div class="slider">
-               <div class="slides">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png" class="slide" alt="Image 1">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png" class="slide" alt="Image 2">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png" class="slide" alt="Image 3">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png" class="slide" alt="Image 4">
+                   <div class="col-md-8">
+                       <table class="table table-bordered">
+                           <thead>
+                               <tr>
+                                   <th scope="col">Product Image</th>
+                                   <th scope="col">Name</th>
+                                   <th scope="col">Price</th>
+                                   <th scope="col">Quantity</th>
+                                   <th scope="col">Total</th>
+                               </tr>
+                           </thead>
+                           <tbody>
+                               <tr>
+                                   <td><img src="https://themewagon.github.io/fruitkha/assets/img/products/product-img-1.jpg" class="img-fluid" alt="Strawberry" style="width: 50px; height: 50px;"></td>
+                                   <td>Strawberry</td>
+                                   <td>$85</td>
+                                   <td><input type="number" class="form-control" value="0"></td>
+                                   <td>1</td>
+                               </tr>
+                               <tr>
+                                   <td><img src="https://themewagon.github.io/fruitkha/assets/img/products/product-img-2.jpg" class="img-fluid" alt="Berry" style="width: 50px; height: 50px;"></td>
+                                   <td>Berry</td>
+                                   <td>$70</td>
+                                   <td><input type="number" class="form-control" value="0"></td>
+                                   <td>1</td>
+                               </tr>
+                               <tr>
+                                   <td><img src="https://themewagon.github.io/fruitkha/assets/img/products/product-img-3.jpg" class="img-fluid" alt="Lemon" style="width: 50px; height: 50px;"></td>
+                                   <td>Lemon</td>
+                                   <td>$35</td>
+                                   <td><input type="number" class="form-control" value="0"></td>
+                                   <td>1</td>
+                               </tr>
+                           </tbody>
+                       </table>
+                   </div>
+                   <div class="col-md-4">
+                       <div class="border p-3 mb-3">
+                           <h5>Total</h5>
+                           <p>Subtotal: <span class="float-right">$500</span></p>
+                           <p>Shipping: <span class="float-right">$45</span></p>
+                           <p>Total: <span class="float-right">$545</span></p>
+                           <button class="btn btn-primary btn-block">Update Cart</button>
+                           <button class="btn btn-success btn-block checkout">Check Out</button>
+                       </div>
+                       <div class="border p-3">
+                           <h5>Apply Coupon</h5>
+                           <input type="text" class="form-control mb-2" placeholder="Coupon">
+                           <button class="btn btn-warning btn-block">APPLY</button>
+                       </div>
+                   </div>
                </div>
            </div>
-      </section>
+     </section>
+     <section class="ads-brand mt-5">
+          <div class="slider">
+               <div class="slides">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png"
+                         class="slide" alt="Image 1">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png"
+                         class="slide" alt="Image 2">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png"
+                         class="slide" alt="Image 3">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png"
+                         class="slide" alt="Image 4">
+               </div>
+          </div>
+     </section>
+     <!-- kết thúc section logo nhà tài trợ -->
+     <!-- end sectionn -->
      <footer>
           <!-- Grid container -->
           <div class="container p-4 pb-0">
@@ -258,11 +220,11 @@
           </div>
           <div class="text-center p-3 end-ft">
                © 2024 Copyright
-               <a class="text-white" href="../index.html"> Fruitshop</a>
+               <a class="text-white" href="index.html"> Fruitshop</a>
           </div>
      </footer>
-     <script src="../js/app.js"></script>
      <script src="../js/responsive.js"></script>
+     <script src="../js/app.js"></script>
 </body>
 
 </html>
