--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Fruits Shop - Asm</title>
-     <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/favicon.png">
+     <link rel="shortcut icon" type="image/png"
+          href="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/favicon.png">
      <link rel="stylesheet" href="./css/style.css">
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,40 +21,44 @@
 </head>
 
 <body>
+     <div id="loading">
+          <div class="spinner"></div>
+      </div>
      <header>
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
                <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/logo.png" width="150px">
           </a>
-          <ul class="navmenu">
-               <li><a href="#" style="color: #F28123;">Home</a></li>
+          <ul class="navmenu" style="transition: all 0.3s ease-in-out;">
+               <li><a href="index.html" style="color: #F28123;">Home</a></li>
                <li><a href="assets/shop.html">Shop</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="assets/about.html">About</a></li>
+               <li><a href="assets/contact.html">Contact</a></li>
           </ul>
-          <ul class="nav-icon">
-               <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+          <ul class="nav-icon" style="transition: all 0.3s ease-in-out;">
+               <li><a href="assets/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
+               <li><span style="color: #fff;" id="username"></span></li>
           </ul>
      </header>
      <!-- header mobile -->
      <header class="new-header">
-          <a href="#" class="logo">
-              <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/logo.png" width="150px">
+          <a href="index.html" class="logo">
+               <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/logo.png" width="150px">
           </a>
           <div class="menu-toggle" id="mobile-menu">
                <i class="fa-solid fa-bars"></i>
           </div>
-          <ul class="navmenu" id="navmenu">
-              <li><a href="#" style="color: #F28123;">Home</a></li>
-              <li><a href="assets/shop.html">Shop</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+          <ul class="navmenu" id="navmenu" style="transition: all 0.3s ease-in-out;">
+               <li><a href="index.html" style="color: #F28123;">Home</a></li>
+               <li><a href="assets/shop.html">Shop</a></li>
+               <li><a href="assets/about.html">About</a></li>
+               <li><a href="assets/contact.html">Contact</a></li>
           </ul>
-          <ul class="nav-icon" id="nav-icon">
-              <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-              <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
+          <ul class="nav-icon" id="nav-icon" style="transition: all 0.3s ease-in-out;">
+               <li><a href="assets/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+               <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-      </header>
+     </header>
      <!-- start section main  -->
      <section class="main_bg">
           <div class="main_content">
@@ -221,16 +226,20 @@
      </section>
      <!-- end sectioon -->
      <!-- logo nhà tài trợ -->
-      <section class="ads-brand">
+     <section class="ads-brand">
           <div class="slider">
                <div class="slides">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png" class="slide" alt="Image 1">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png" class="slide" alt="Image 2">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png" class="slide" alt="Image 3">
-                   <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png" class="slide" alt="Image 4">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/1.png"
+                         class="slide" alt="Image 1">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/2.png"
+                         class="slide" alt="Image 2">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/3.png"
+                         class="slide" alt="Image 3">
+                    <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/company-logos/4.png"
+                         class="slide" alt="Image 4">
                </div>
-           </div>
-      </section>
+          </div>
+     </section>
      <!-- kết thúc section logo nhà tài trợ -->
      <!-- end sectionn -->
      <footer>
@@ -325,6 +334,7 @@
      </footer>
      <script src="js/app.js"></script>
      <script src="js/responsive.js"></script>
+     <script src="js/crud.js"></script>
 </body>
 
 </html>
