--- a/register.html
+++ b/register.html
@@ -1,61 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/form.css" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  </head>
-  <body>
-    <section class="container">
-      <header>Registration Form</header>
-      <form class="form">
-        <div class="input-box">
-          <label>User Name</label>
-          <input type="text" id="username" placeholder="Enter user name" />
-        </div>
 
-        <div class="input-box">
-          <label>Email Address</label>
-          <input type="text" id="email" placeholder="Enter email address" />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/form.css" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+<style>
+  #loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
 
-        <div class="column">
-          <div class="input-box">
-            <label>Phone Number</label>
-            <input type="number" id="phone" placeholder="Enter phone number" />
-          </div>
-          <div class="input-box">
-            <label>Birth Date</label>
-            <input type="date" id="dateofbirth" placeholder="Enter birth date" />
-          </div>
-        </div>
-        <div class="gender-box">
-          <h3>Gender</h3>
-          <div class="gender-option">
-            <div class="gender">
-              <input type="radio" id="check-male" name="gender" />
-              <label for="check-male">male</label>
-            </div>
-            <div class="gender">
-              <input type="radio" id="check-female" name="gender" />
-              <label for="check-female">Female</label>
-            </div>
-            <div class="gender">
-              <input type="radio" id="check-other" name="gender" />
-              <label for="check-other">prefer not to say</label>
-            </div>
-          </div>
+  .spinner {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #f28123;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+</style>
+
+<body>
+  <div id="loading">
+    <div class="spinner"></div>
+  </div>
+  <section class="container">
+    <header>Registration Form</header>
+    <form class="form">
+      <div class="input-box">
+        <label>User Name</label>
+        <input type="text" id="username" placeholder="Enter user name" />
+      </div>
+
+      <div class="input-box">
+        <label>Email Address</label>
+        <input type="text" id="email" placeholder="Enter email address" />
+      </div>
+
+      <div class="column">
+        <div class="input-box">
+          <label>Phone Number</label>
+          <input type="number" id="phone" placeholder="Enter phone number" />
         </div>
         <div class="input-box">
-          <label>Password</label>
-          <input type="password" id="password" placeholder="Enter Password" />
-          <p>Already have an account? <a href="login.html">Sign in!</a></p>
+          <label>Birth Date</label>
+          <input type="date" id="dateofbirth" placeholder="Enter birth date" />
         </div>
-        <button type="submit" id="register-btn">Register</button>
-      </form>
-    </section>
-    <script src="js/reg.js"></script>
-  </body>
+      </div>
+      <div class="gender-box">
+        <h3>Gender</h3>
+        <div class="gender-option">
+          <div class="gender">
+            <input type="radio" id="check-male" name="gender" />
+            <label for="check-male">male</label>
+          </div>
+          <div class="gender">
+            <input type="radio" id="check-female" name="gender" />
+            <label for="check-female">Female</label>
+          </div>
+          <div class="gender">
+            <input type="radio" id="check-other" name="gender" />
+            <label for="check-other">prefer not to say</label>
+          </div>
+        </div>
+      </div>
+      <div class="input-box">
+        <label>Password</label>
+        <input type="password" id="password" placeholder="Enter Password" />
+        <p>Already have an account? <a href="login.html">Sign in!</a></p>
+      </div>
+      <button type="submit" id="register-btn">Register</button>
+    </form>
+  </section>
+  <script src="js/reg.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      setTimeout(function () {
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("content").style.display = "block";
+      }, 1000);
+    });
+  </script>
+</body>
+
 </html>
