--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
      <div id="loading">
           <div class="spinner"></div>
-      </div>
+     </div>
      <header>
           <a href="index.html" class="logo">
                <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/logo.png" width="150px">
@@ -37,7 +37,7 @@
           <ul class="nav-icon" style="transition: all 0.3s ease-in-out;">
                <li><a href="assets/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
-               <li><span style="color: #fff;" id="username"></span></li>
+               <li><i class="fa-solid fa-right-from-bracket text-white mt-1" id="logoutclass" style="margin-left: 10px; display: none;"></i></li>
           </ul>
      </header>
      <!-- header mobile -->
@@ -57,6 +57,7 @@
           <ul class="nav-icon" id="nav-icon" style="transition: all 0.3s ease-in-out;">
                <li><a href="assets/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
+               <li><i class="fa-solid fa-right-from-bracket text-white logoutclass" id="logoutclass" style="margin-left: 10px;"></i></li>
           </ul>
      </header>
      <!-- start section main  -->
