--- a/assets/shop.html
+++ b/assets/shop.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-     <div id="loading">
+     <!-- <div id="loading">
           <div class="spinner"></div>
-      </div>
+      </div> -->
      <header>
           <a href="../index.html" class="logo">
                <img src="https://raw.githubusercontent.com/themewagon/fruitkha/main/assets/img/logo.png" width="150px">
